--- a/SecondModule/pom.xml
+++ b/SecondModule/pom.xml
@@ -10,4 +10,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>SecondModule</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+    </dependencies>
 </project>
